06-05-6 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: use of escapeStrForLike()

06-04-07 Rene Fritz  <r.fritz@colorcube.de>

	* 1.0 release