@@ -1,7 +1,11 @@
-06-05-6 Rene Fritz  <r.fritz@colorcube.de>
+2007-10-17  Michael Stucki  <michael@typo3.org>
+
+	* Takeover by the DAM development team
+
+2006-05-6  Rene Fritz  <r.fritz@colorcube.de>
 
 	* Fix: use of escapeStrForLike()
 
-06-04-07 Rene Fritz  <r.fritz@colorcube.de>
+2006-04-07  Rene Fritz  <r.fritz@colorcube.de>
 
 	* 1.0 release
